add rout of count all users
